--- a/lösungen.html
+++ b/lösungen.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build free website</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
 
     
 
@@ -341,7 +341,7 @@ Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
     </div>
 </section>
 
-<section class="cid-qMPFCzGXTt mbr-reveal" id="footer1-33">
+<section class="cid-qMPLvG951t mbr-reveal" id="footer1-3c">
 
     
 
@@ -351,7 +351,7 @@ Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="index.html">
                         <img src="assets/images/imageedit-28-6392666693-528x191.png" alt="Mobirise" title="">
                     </a>
                 </div>
