--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="testimonials2 cid-qLvY8sNXv0" id="testimonials2-x">
+<section class="engine"><a href="https://mobirise.ws/q">free website builder download</a></section><section class="testimonials2 cid-qLvY8sNXv0" id="testimonials2-x">
 
     
 
@@ -186,7 +186,7 @@
   </div>
 </section>
 
-<section class="cid-qMPFHHqfeL mbr-reveal" id="footer1-35">
+<section class="cid-qMPLyYljXi mbr-reveal" id="footer1-3d">
 
     
 
@@ -196,7 +196,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="index.html">
                         <img src="assets/images/imageedit-28-6392666693-528x191.png" alt="Mobirise" title="">
                     </a>
                 </div>
