--- a/wir.html
+++ b/wir.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/e">best web builder software</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
 
     
 
@@ -152,7 +152,7 @@
     </div>
 </section>
 
-<section class="cid-qMPFxTxMm0 mbr-reveal" id="footer1-31">
+<section class="cid-qMPLs76meR mbr-reveal" id="footer1-3b">
 
     
 
@@ -162,7 +162,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="index.html">
                         <img src="assets/images/imageedit-28-6392666693-528x191.png" alt="Mobirise" title="">
                     </a>
                 </div>
