--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">free html site creator</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
+<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
 
     
 
@@ -81,15 +81,15 @@
         <div class="media-container-column mbr-white col-md-8">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-5"></h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">dbprc– Einfachheit in einer neuen Dimension</h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7"><strong>Wer sind wir</strong> <br><br><em>dbprc</em> ist ein erfolgreicher mittelständischer IT-Dienstleister. 
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">Wer sind wir <br><br><em>dbprc</em> ist ein erfolgreicher mittelständischer IT-Dienstleister. 
 <br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim 
 <br>
 <br>Unsere Kernkompetenz liegt in der ORACLE-Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE-Datenbanksystemen 
 <br>
 <br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen der Privatwirtschaft 
 <br>
-<br><strong>Was machen wir 
-</strong><br>
+<br>Was machen wir 
+<br>
 <br>Seit 1996 entwickeln wir für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit im Bereich 
 <br>ORACLE + Java + Android</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-black-outline display-4" href="index.html">LIVE DEMO</a></div>
