--- a/lösungen.html
+++ b/lösungen.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
+<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
 
     
 
@@ -114,8 +114,7 @@
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Dokumentenmanagementsysteme&nbsp;</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7"><em>Haben Sie viel Papier?
-<br>Wir räumen auf!</em><br><br>Seit 15 Jahre kümern wir uns um Eingangsdokumente in Papier Form und besorgen dass alle durch verschidene IT Processe bearbeitet sind.<br>Bearbeitung besteht aus Einscanen/Erkennung der Inhalte und Zourdnung in die Datenbank.&nbsp;<br><br>Wir können in kurzen Zeitraum:<br>- Digitialisirung und Archivierung schon vorhandener Dokumenten, die danach durchsucbar sind<br><br>- &nbsp;erzeugen sehr große Menge der Dokumenten (100000 in einem Tag)<br>- Dokumente sind sowohl druckbereit als auch als PDF in unserem System nach verschidenen Kriterien zugeordnet&nbsp;<br>&nbsp;- Dokumente können gleichzeitig als scanbare Formulare &nbsp;dargestellt werden die wir dann in unseren Scanprozesse weiter auswerten können<br><br>Es ist möglich die Dokumente nach den gewollten
-Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
+<br>Wir räumen auf!</em><br><br>Seit 15 Jahre kümmern wir uns um Eingangsdokumente in Papierform und besorgen dass alle durch verschidene IT Processe bearbeitet sind.<br>Bearbeitung besteht aus Einscanen/Erkennung der Inhalte und Zourdnung in die Datenbank.<br></p>
                         </div>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
