create github pages

--- a/wir.html
+++ b/wir.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">how to make own website</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/f">simple web builder</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
 
     
 
@@ -89,10 +89,9 @@
                 </span>          
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Wann und Warum gegründet?</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Geschichte</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Uli Wachter sen. hat 1996 die dbprc (Datenbank &amp; Projektconsulting) gegründet, um sich von den konvenzionellen Wegen der Datenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.<br><br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.<br></p>
+                            Uli Wachter sen. hat 1996 die dbprc (Datenbank &amp; Projektconsulting) gegründet, um sich von den konvenzionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.<br><br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.<br><br>Seit 2014 wird das Unternehmen nun in zweiter Generation von Ulrich Ph. Wachter weitergeführt.<br></p>
                      </div>
                 </div>
             </div>
@@ -103,10 +102,9 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            erste Kunden</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Kunden</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Wir haben schon in 1996 erste Kunden gewonnen.<br>- Bosch<br>- AmadeusFire<br>- Debis</p>
+                            Wir haben bereits mit einer Vielzahl von Kunden aus unterschiedlichen Branchen zusammengearbeitet und uns verschiedensten Herausforderungen mit Ihnen gestellt.<br>- Bosch<br>- AmadeusFire<br>- Debis</p>
                     </div>
                 </div>
             </div> 
@@ -119,7 +117,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">der neue Name</h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            2008 wurde unsere Firma in eine GmbH umgewandelt, um sich besser auf dem Markt zu positionieren.<br></p>
+                            2008 wurde unsere Firma in eine GmbH umgewandelt.<br></p>
                     </div>
                 </div>
             </div>
