--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free website builder</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
 
     
 
@@ -87,8 +87,7 @@
 <br>Unsere Kunden sind u.a. bundesweit tätige öffentliche Organisationen und Unternehmen der Privatwirtschaft<br>
 <br><strong>Was machen wir</strong> 
 <br>
-<br>Seit 1996 entwickeln wir entweder vor Ort oder an unseren Standorten für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit im Bereich 
-<br>ORACLE® + Java + Android</p>
+<br>Seit 1996 entwickeln wir entweder vor Ort oder an unseren Standorten für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit in den Bereichen &nbsp;<br>ORACLE® + Java + Android</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-black-outline display-4" href="index.html">LIVE DEMO</a></div>
         </div>
     </div>
