--- a/lösungen.html
+++ b/lösungen.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="tabs3 cid-qN2CiUIcCV mbr-parallax-background" id="tabs3-3g">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="tabs3 cid-qN2CiUIcCV mbr-parallax-background" id="tabs3-3g">
 
     
 
@@ -202,9 +202,7 @@
 </em><br>
 <br>
 <br>Wir erfassen für Sie komplexe Geodaten und ermöglichen mit unseren Geoinformationssystemen die einfache und zielführende Auswertung der Daten. Unsere Kompetenzen umfassen z.B.: <br>- Geokodierung 
-<br>- Tracking und Tracing 
-<br>- Mautberechnung 
-<br>- Lokalisierung von Kunden und Zielgruppen 
+<br>- Tracking und Tracing <br>- Lokalisierung von Kunden und Zielgruppen 
 <br>- Darstellung von Gebieten, Kundendaten oder Filialen in Bezug auf ihre Umsätze, Potenziale und Entwicklungen</p>
                         </div>
 
