--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free web page software</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
+<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
 
     
 
@@ -160,7 +160,7 @@
                 <div class="col-md-6">
                     <div class="social-list align-right">
                         <div class="soc-item">
-                            <a href="https://xing.de" target="_blank">
+                            <a href="https://www.xing.com/companies/dbprcgmbh" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-xing socicon"></span>
                             </a>
                         </div>
