--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
+<section class="engine"><a href="https://mobirise.ws/n">mobile website maker app</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
 
     
 
@@ -81,7 +81,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><br></span><br><span style="font-style: normal;">dbprc– Einfachheit in einer neuen Dimension</span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">Wer wir sind&nbsp;<br><br><em>dbprc</em> ist ein erfolgreicher mittelständischer IT-Dienstleister. 
 <br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim<br>
-<br>Unsere Kernkompetenz liegt in der ORACLE® -Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE® -Datenbanksysteme<br>
+<br>Unsere Kernkompetenzen liegen in der ORACLE® -Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE® -Datenbanksysteme<br>
 <br>Unsere Kunden sind u.a. bundesweit tätige öffentliche Organisationen und Unternehmen der Privatwirtschaft<br>
 <br>Was machen wir 
 <br>
