--- a/wir.html
+++ b/wir.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/e">best web authoring software</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
 
     
 
@@ -89,7 +89,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Geschichte</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Ulrich Wachter sen. hat 1996 die dbprc (database and process) gegründet, um sich von den konvenzionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.<br><br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.<br><br>Seit 2014 wird das Unternehmen nun in zweiter Generation von Ulrich Ph. Wachter weitergeführt.<br></p>
+                            Ulrich Wachter sen. hat 1996 die dbprc (database and process) gegründet, um sich von den konvenzionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.<br><br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.<br><br>Seit 2015 wird das Unternehmen nun in zweiter Generation von Ulrich Ph. Wachter weitergeführt.<br></p>
                      </div>
                 </div>
             </div>
