create github pages

--- a/lösungen.html
+++ b/lösungen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free website software</a></section><section class="tabs3 cid-qN2CiUIcCV mbr-parallax-background" id="tabs3-3g">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="tabs3 cid-qN2CiUIcCV mbr-parallax-background" id="tabs3-3g">
 
     
 
@@ -197,7 +197,7 @@
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7"><em>Ist die Adresse korrekt? Gute Frage…</em><br>
 <br>
 <br><br>Adressen kommen auf vielen Wegen in Ihr Unternehmen: Sie werden via Telefon, Vertrieb, Briefkontakt, E-Mail, Internet etc. übermittelt und gespeichert. Dabei entstehen schnell Tippfehler oder Verhörer, die dann ungeprüft in den Datenbestand übernommen werden. Das kann weitreichende Folgen haben. Stimmt die Datenbasis nicht, verpuffen Marketing-Aktionen wirkungslos, können Rechnungen nicht zugestellt werden, steigen die Rückläuferquoten und Streuverluste von Mailings.
-<br>In Kürze können wir die Adressen Ihrer Kunden für Sie validieren.<br></p>
+<br>Sehr schnell können wir die Adressen Ihrer Kunden für Sie validieren.<br></p>
                         </div>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
@@ -222,7 +222,7 @@
 <br><br>Unsere Lösugen im Bereich Routenberechnung umfassen: 
 <br>- Ermittlung von Distanzen in Abhängigkeit von Fahrzeiten, Erreichbarkeiten und Versorgungsgraden 
 <br>- Ermittlung optimaler Routen
-<br>- Durchführung von Suchen in festgelegten Umkreisen</p>
+<br>- Durchführung von Suchen in festgelegten Umkreisen<br><br>Alles kann in Ihrem System integriert sein, unabhängig vom Internet oder anderen Anbietern.</p>
                         </div>
 
                         
