--- a/wir.html
+++ b/wir.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">mobile website builder app</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/b">best free web site creator</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
 
     
 
@@ -88,8 +88,11 @@
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Geschichte</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Ulrich Wachter sen. hat 1996 die dbprc (database and process) gegründet, um sich von den konvenzionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.<br><br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.<br><br>Seit 2015 wird das Unternehmen nun in zweiter Generation von Ulrich Ph. Wachter weitergeführt.<br></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Ulrich Wachter sen. hat 1996 die dbprc (database and process) gegründet, um sich von den konvenzionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.
+<br>
+<br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.
+<br>
+<br>Seit 2015 wird das Unternehmen nun in zweiter Generation von Ulrich Ph. Wachter weitergeführt.<br></p>
                      </div>
                 </div>
             </div>
@@ -101,11 +104,15 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Kunden</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>
-                            Wir haben bereits mit einer Vielzahl von Kunden aus unterschiedlichen Branchen zusammengearbeitet und uns verschiedensten Herausforderungen mit Ihnen gestellt. Zu unseren Kunden zählten bislang u.a.:</em><br><br>- Ein weltweit agierender Technologiekonzern
-<br>- Ein bundesweit tätiges Personaldienstleistungsunternehmen
-<br>- Ein global tätiger IT-Dienstleister aus der Automobilbranche<br>-&nbsp;Ein weltweit aktiver Pharmakonzern<br>- Ein deutsches Versicherungsunternehmen<br>-&nbsp;Ein Tagebau-Unternehmen in der Kohlegewinnung<br>-&nbsp;Eines der größten staatlichen Unternehmen mit Schwerpunkt im Versicherungsschutz 
-</p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Wir haben bereits mit einer Vielzahl von Kunden aus unterschiedlichen Branchen zusammengearbeitet und uns verschiedensten Herausforderungen mit Ihnen gestellt. Zu unseren Kunden zählten bislang u.a.:
+</em><br>
+<br>- Ein weltweit agierender Technologiekonzern 
+<br>- Ein bundesweit tätiges Personaldienstleistungsunternehmen 
+<br>- Ein global tätiger IT-Dienstleister aus der Automobilbranche
+<br>- Ein weltweit aktiver Pharmakonzern
+<br>- Ein deutsches Versicherungsunternehmen
+<br>- Ein Tagebau-Unternehmen in der Kohlegewinnung
+<br>- Eines der größten staatlichen Unternehmen mit Schwerpunkt im Versicherungsschutz</p>
                     </div>
                 </div>
             </div> 
@@ -133,7 +140,7 @@
     </div>
 </section>
 
-<section class="cid-qNnCwuTB2Y mbr-reveal" id="footer1-3k">
+<section class="cid-qNtZDPjuFF mbr-reveal" id="footer1-3n">
 
     
 
@@ -144,12 +151,12 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/imageedit-28-6392666693-528x191.png" alt="Mobirise" title="">
+                        <img src="assets/images/imageedit-28-6392666693-528x1912.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">Ihr Ansprechpartner</h5>
+                <h5 class="pb-3"><br><br><br><br><br><br>Ihr Ansprechpartner</h5>
                 <p class="mbr-text"></p><p>dbprc GmbH
 <br>Ulrich Ph. Wachter
 <br>Dynamostraße 15
@@ -161,7 +168,7 @@
 <br><br><br><em><a href="formular.html">Kontakt</a>&nbsp; &nbsp; &nbsp;</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <em><a href="impressum.html">Impressum</a></em></p><p></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">dbprc GmbH 
+                <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
 <div>Verwaltung&nbsp;</div></h5>
                 <p class="mbr-text">Makartstraße 3 
 <br>75175 Pforzheim 
@@ -170,7 +177,7 @@
 <br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.de</a>&nbsp;</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">dbprc GmbH 
+                <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
 <div>Entwicklung</div></h5>
                 <p class="mbr-text">Dynamostraße 15 
 <br>68165 Mannheim 
