--- a/lösungen.html
+++ b/lösungen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">how to make own website</a></section><section class="tabs3 cid-qN2CiUIcCV mbr-parallax-background" id="tabs3-3g">
+<section class="engine"><a href="https://mobirise.ws/q">offline website builder download</a></section><section class="tabs3 cid-qN2CiUIcCV mbr-parallax-background" id="tabs3-3g">
 
     
 
@@ -388,7 +388,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/imageedit-28-6392666693-528x1912.png" alt="Mobirise" title="">
+                        <img src="assets/images/imageedit-28-6392666693-528x1914.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
