--- a/referenzen.html
+++ b/referenzen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop website builder</a></section><section class="features6 cid-qMsH5WZH8j" id="features6-29">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="features6 cid-qMsH5WZH8j" id="features6-29">
     
     
 
@@ -284,7 +284,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/imageedit-28-6392666693-528x1912.png" alt="Mobirise" title="">
+                        <img src="assets/images/imageedit-28-6392666693-528x1914.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
