--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html web builder</a></section><section class="testimonials4 cid-qLvY6ZzmAp" id="testimonials4-u">
+<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="testimonials4 cid-qLvY6ZzmAp" id="testimonials4-u">
 
   
 
@@ -142,7 +142,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/imageedit-28-6392666693-528x1912.png" alt="Mobirise" title="">
+                        <img src="assets/images/imageedit-28-6392666693-528x1914.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
