--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop web creator</a></section><section class="cid-qNtXIIVate mbr-fullscreen mbr-parallax-background" id="header2-3j">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="cid-qNtXIIVate mbr-fullscreen mbr-parallax-background" id="header2-3j">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(255, 255, 255);"></div>
+    
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
@@ -93,7 +93,7 @@
 <br>Seit 1996 entwickeln wir entweder vor Ort oder an unseren Standorten für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit in den Bereichen  
 <br>ORACLE® + Java + Android
 <br>
-<br>Unsere Spezialtät sind Web-Anwendungen im Intranet oder Internet(Cloud) basiert auf ORACLE® Apex</p>
+<br>Unsere Spezialtäten sind Web-Anwendungen im Intranet oder Internet(Cloud) basiert auf ORACLE® Apex</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="index.html">LIVE DEMO</a></div>
             </div>
         </div>
