--- a/referenzen.html
+++ b/referenzen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">how to design own website</a></section><section class="features6 cid-qMsI3AEoIq" id="features6-2c">
+<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="features6 cid-qMsI3AEoIq" id="features6-2c">
     
     
 
@@ -233,7 +233,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/imageedit-28-6392666693-528x1912.png" alt="Mobirise" title="">
+                        <img src="assets/images/imageedit-28-6392666693-528x1913.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
