--- a/impressum.html
+++ b/impressum.html
@@ -97,7 +97,7 @@ Quellenangaben: Disclaimer eRecht24, Datenschutzerklärung Google Analytics">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="header12 cid-qL8cVDQiny" id="header12-n">
+<section class="engine"><a href="https://mobirise.ws/d">best web software</a></section><section class="header12 cid-qL8cVDQiny" id="header12-n">
 
     
 
@@ -178,7 +178,7 @@ Quellenangaben: Disclaimer eRecht24, Datenschutzerklärung Google Analytics">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/imageedit-28-6392666693-528x1912.png" alt="Mobirise" title="">
+                        <img src="assets/images/imageedit-28-6392666693-528x1913.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
