--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="testimonials4 cid-qLvY6ZzmAp" id="testimonials4-u">
+<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="testimonials4 cid-qLvY6ZzmAp" id="testimonials4-u">
 
   
 
