create github pages

--- a/page8.html
+++ b/page8.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html website builder</a></section><section class="countdown1 cid-qP5zLRFxR0 mbr-parallax-background" id="countdown1-4u">
+<section class="engine"><a href="https://mobirise.ws/l">free html web maker</a></section><section class="countdown1 cid-qP5zLRFxR0 mbr-parallax-background" id="countdown1-4u">
     
     
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(35, 35, 35);">
@@ -87,7 +87,7 @@
         <div class="hoursCountdown" title="Hours"></div> 
         <div class="minutesCountdown" title="Minutes"></div> 
         <div class="secondsCountdown" title="Seconds"></div>
-        <div class="countdown pt-5 mt-2" data-due-date="2018/04/30"> 
+        <div class="countdown pt-5 mt-2" data-due-date="2018/05/15"> 
         </div>
     </div>
 </section>
